--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <h1 class="text">Hello, Arthur</h1>
+    <div id="greeting" class="text">Hello </div>
     <h2 id="instructions" class="text"></h2>
     <div id="gallery" class="grid"></div>
     <div id="quiz">
         <h2 class="text quiz-text">Find this picture then press Enter: </h2>
-        <img id="quiz_img" class="thumbnail" src="assets/amber-the-ambulance.png"></img>
+        <img id="quiz_img" class="thumbnail"></img>
     </div>
 
-    <script module="" src="./dist/app.js" type="text/javascript"></script>
+    <script module="" src="./dist/bundle.js" type="text/javascript"></script>
 </body>
 </html>
