added textfield, requires more styling

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <div id="greeting" class="text">Hello </div>
+    <div id="greeting-container" class="text">
+        <div>Hello&nbsp;</div>
+        <input id="greeting-name" type="text"></input>
+    </div>
     <h2 id="instructions" class="text"></h2>
     <div id="gallery" class="grid"></div>
     <div id="quiz">
