formatted names field

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <div id="greeting-container" class="text">
-        <div>Hello&nbsp;</div>
+    <div id="greeting-container">
+        <div>Hello,&nbsp;</div>
         <input id="greeting-name" type="text"></input>
     </div>
-    <h2 id="instructions" class="text"></h2>
+    <h2 id="instructions"></h2>
     <div id="gallery" class="grid"></div>
     <div id="quiz">
-        <h2 class="text quiz-text">Find this picture then press Enter: </h2>
+        <h2 class="quiz-text">Find this picture then press Enter: </h2>
         <img id="quiz_img" class="thumbnail"></img>
     </div>
 
