process alphanumeric, space and backspace keypresses

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="greeting-container">
         <div>Hello,&nbsp;</div>
-        <input id="greeting-name" type="text"></input>
+        <input id="greeting-name" type="text" maxlength="9"></input>
     </div>
     <h2 id="instructions"></h2>
     <div id="gallery" class="grid"></div>
